Se termino de documentar los metodos
